--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <div class="container">
+      <%= render 'layouts/navigation' %>
+      <%= yield %>
+  </div> <!-- /container -->
 </body>
 </html>
