--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,6 @@
 <div class="brand">
     <center><h3 class="text-muted">Spick And Span</h3></center>
+    <center><span>quality cleaning services</span></center>
 </div>
 
 <nav class=" navbar navbar-default">
