--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,44 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//.brand2{
+//  position: relative;
+//  top: 23px;
+//  font-family: helvetica-w01-light,helvetica-w02-light,sans-serif;
+//  font-size: 30px;
+//  line-height: 1em;
+//  color: #646464;
+//  margin: 0;
+//  padding: 0;
+//  border: 0;
+//  outline: 0;
+//  vertical-align: baseline;
+//  background: transparent;
+//  text-align: center;
+//}
+//
+//.brand1{
+//  position: relative;
+//  top: 23px;
+//  line-height: 1em;
+//  margin: 0;
+//  padding: 0;
+//  border: 0;
+//  outline: 0;
+//  vertical-align: baseline;
+//  background: transparent;
+//  text-align: center;
+//  font: normal normal normal 68px/1.1em impact,impact-w01-2010,impact-w02-2010,impact-w10-2010,sans-serif;
+//  color: #72D2E5;
+//  letter-spacing: normal;
+//  word-wrap: break-word;
+//}
+//
+//.navbar {
+//position: absolute;
+//top: 161px;
+//min-height: 50px;
+//margin-bottom: 20px;
+//border: 1px solid transparent;
+//}
