--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -86,3 +86,42 @@
 .s3repeaterButton[data-state~="over"] {background-color:rgba(200, 200, 200, 0.35);  transition: background-color 0.4s ease 0s;}
 .s3repeaterButton[data-state~="over"] .s3repeaterButtonlabel {color:#A8A7A7;transition: color 0.4s ease 0s;}
 .s3repeaterButton[data-state~="selected"] {background-color:rgba(200, 200, 200, 0.35);  transition: background-color 0.4s ease 0s;}
+
+.s12 li {box-sizing:border-box;position:relative;}
+.s12 ul {box-sizing:border-box;position:relative;}
+.s12_foot {min-height:50px;position:relative;}
+.s12 span {color:rgba(100, 100, 100, 1);font:normal 14px 'Helvetica Neue', Helvetica, sans-serif;position:absolute;top:0;}
+.s12 span.s12_success {color:#BADA55;}
+.s12 span.s12_error {color:#8B0000;}
+.s12 button,.s12 input,.s12 textarea {box-sizing:border-box;border-radius:0;  }
+.s12 input,.s12 textarea {background-color:rgba(251, 251, 251, 0.04);  font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;  -webkit-appearance:none;-moz-appearance:none;border:1px solid rgba(200, 200, 200, 1);color:rgba(100, 100, 100, 1);margin:0 0 5px;padding:5px;width:100%;}
+.s12 input.s12_error,.s12 textarea.s12_error {border:1px solid #8B0000;color:#8B0000;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s12 textarea {height:100%;resize:none;}
+.s12 button {border:0;color:rgba(100, 100, 100, 1);cursor:pointer;background-color:rgba(200, 200, 200, 0.4);  font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;  padding:5px;position:absolute;top:0;}
+.s12[data-state~="desktop"] li {width:50%;}
+.s12[data-state~="desktop"].s12[data-state~="left"] li.s12_left {margin:0;}
+.s12[data-state~="desktop"].s12[data-state~="left"] li.s12_right {bottom:0;padding:0 0 5px 5px;position:absolute;right:2px;top:0;}
+.s12[data-state~="desktop"].s12[data-state~="right"] li.s12_left {margin-left:50%;}
+.s12[data-state~="desktop"].s12[data-state~="right"] li.s12_right {bottom:0;left:2px;padding:0 5px 5px 0;position:absolute;top:0;}
+.s12[data-state~="mobile"] li {display:block;width:100%;}
+.s12[data-state~="mobile"] input,.s12[data-state~="mobile"] textarea {font-size:16px;}
+.s12[data-state~="mobile"] input::-webkit-input-placeholder,.s12[data-state~="mobile"] textarea::-webkit-input-placeholder {line-height:45px;font-size:16px;}
+.s12[data-state~="mobile"] input::-moz-placeholder,.s12[data-state~="mobile"] textarea::-moz-placeholder {line-height:45px;font-size:16px;}
+.s12[data-state~="mobile"] input:-ms-input-placeholder,.s12[data-state~="mobile"] textarea:-ms-input-placeholder {line-height:45px;font-size:16px;}
+.s12[data-state~="mobile"] input::placeholder,.s12[data-state~="mobile"] textarea::placeholder {line-height:45px;font-size:16px;}
+.s12[data-state~="mobile"] input {height:45px;line-height:45px;margin-bottom:15px;}
+.s12[data-state~="mobile"] textarea {height:130px;}
+.s12 input::-webkit-input-placeholder,.s12 textarea::-webkit-input-placeholder {color:#646464;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s12 input::-moz-placeholder,.s12 textarea::-moz-placeholder {color:#646464;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s12 input:-ms-input-placeholder,.s12 textarea:-ms-input-placeholder {color:#646464;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s12 input::placeholder,.s12 textarea::placeholder {color:#646464;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s12 input::-webkit-input-placeholder.s12_error,.s12 textarea::-webkit-input-placeholder.s12_error {color:#8B0000;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s12 input::-moz-placeholder.s12_error,.s12 textarea::-moz-placeholder.s12_error {color:#8B0000;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s12 input:-ms-input-placeholder.s12_error,.s12 textarea:-ms-input-placeholder.s12_error {color:#8B0000;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s12 input::placeholder.s12_error,.s12 textarea::placeholder.s12_error {color:#8B0000;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s12[data-state~="right"] {direction:rtl;text-align:right;}
+.s12[data-state~="right"] button {left:0;}
+.s12[data-state~="right"] span {left:100px;right:0;}
+.s12[data-state~="left"] {direction:ltr;text-align:left;}
+.s12[data-state~="left"] button {right:0;}
+.s12[data-state~="left"] span {left:0;right:100px;}
