--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -205,3 +205,33 @@
 .loginDialogpasswordInput:not([data-state~="invalid"]) .loginDialogpasswordInputerrorMessage {visibility:hidden;}
 .loginDialogpasswordInput[data-state~="invalid"] .loginDialogpasswordInputerrorMessage {visibility:visible;}
 .loginDialogpasswordInput[data-state~="invalid"] input {border-color:#d74401;}
+
+
+.s10itemsContainer {position:absolute;top:0;right:0;bottom:0;left:0;border-radius:0;  overflow:hidden;}
+.s10_btn {transition: opacity 0.5s ease 0s;  opacity:0.4;height:70px;background:url(http://static.parastorage.com/services/skins/2.995.7/images/wysiwyg/core/themes/base/arrows_white_new3.png) no-repeat;width:45px;position:absolute;top:50%;margin-top:-35px;cursor:pointer;}
+.s10[data-state~="mobile"] .s10_btn {opacity:1;}
+.s10buttonPrev {left:20px;background-position:0 0;}
+.s10buttonNext {right:20px;background-position:100% 0;}
+.s10autoplay {transition: opacity 0.5s ease 0s;  opacity:0;position:absolute;right:24px;bottom:24px;width:10px;height:10px;padding:5px;cursor:pointer;}
+.s10counter {display:none;}
+.s10[data-state~="autoplayOff"] .s10autoplay > span {display:inline-block;border:5px solid transparent;border-left:5px solid #646464;width:0;height:0;position:relative;z-index:0;}
+.s10[data-state~="autoplayOn"] .s10autoplay > span {display:inline-block;border-left:2px solid #646464;border-right:2px solid #646464;height:10px;width:1px;margin-right:5px;position:relative;z-index:0;}
+.s10_buttons {transition: opacity 0.5s ease 0s;  opacity:0;}
+.s10[data-state~="mobile"] .s10_buttons {opacity:1;}
+.s10[data-state~="showTextPanel"] .s10_pnl {opacity:1;}
+.s10_btn:hover {opacity:1;}
+.s10[data-state~="touchRollOver"] .s10_buttons,.s10[data-state~="touchRollOver"] .s10autoplay,.s10[data-state~="touchRollOver"] .s10_pnl,.s10[data-state~="touchRollOver"] .s10_btn {opacity:1;}
+.s10[data-state~="showButtons"] .s10_buttons {opacity:1;}
+.s10imageItemimageWrapper {position:absolute;}
+.s10imageItemzoom {position:absolute;top:4px;right:4px;bottom:4px;left:4px;}
+.s10imageItemimage {border-radius:0;}
+.s10imageItempanel {background-color:rgba(251, 251, 251, 0.8);  transition: opacity 0.5s ease 0s;  opacity:0;position:absolute;left:24px;bottom:24px;margin-right:104px;border-top-left-radius:0 !important;border-top-right-radius:0 !important;}
+.s10imageItem h3,.s10imageItem p,.s10imageItem a {color:#646464;}
+.s10imageItemtitle {font:normal normal normal 22px/1.3em 'open sans condensed',sans-serif ;}
+.s10imageItemlink {font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s10imageItemdescription {white-space:pre-line;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;}
+.s10imageItem[data-state~="link"] .s10imageItemlink {text-decoration:underline;cursor:pointer;font:normal normal normal 16px/1.3em 'open sans condensed',sans-serif ;  color:#646464;}
+.s10imageItem[data-state~="noLink"] .s10imageItemlink {display:none;}
+.s10imageItem[data-state~="showPanel"] .s10imageItempanel {opacity:1;}
+.s10imageItem[data-state~="notShowPanel"].s10imageItempanel {opacity:0;}
+.s10imageItem[data-state~="transOut"] .s10imageItempanel,.s10imageItem[data-state~="transIn"] .s10imageItempanel {opacity:0;}
