--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,53 @@
  *= require_self
  */
 
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{
+  color: #72d2e5;
+  background-color: rgba(231, 231, 231, 0);
+}
+
+.navbar-default {
+background-color: #FFFFFF;
+border-color: #e7e7e7;
+}
+
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+border-color: #ffffff;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+background-color: #72d2e5;
+}
+
+.navbar {
+position: relative;
+min-height: 50px;
+height: 80px;
+margin-bottom: 20px;
+border: 1px solid transparent;
+}
+
+.motto{
+  font-size: 12px;
+}
+
+.navbar-nav > li > a {
+padding: 29px;
+}
+
+.navbar-nav > li > a:hover {
+  color: #72d2e5;
+}
+
+.navbar-default .navbar-brand {
+color: #72d2e5;
+}
+
+.navbar-brand {
+font-size: 26px;
+line-height: 20px;
+height: 50px;
+}
 /*.SITE_CONTAINER{
   margin: 0;
   padding: 0;
