add another script

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
 <body>
   
       <%= render 'layouts/navigation' %>
-      <%= yield %>
+      <div class="container">
+              <%= yield %>
+      </div>
+      
+     
   
 </body>
 </html>
