--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -74,6 +74,17 @@ font-size: 40px;
 line-height: 20px;
 height: 50px;
 }
+
+/*footer{
+
+  display: block;
+}
+*/
+
+
+body {
+padding-bottom: 40px;
+}
 /*.SITE_CONTAINER{
   margin: 0;
   padding: 0;
