--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -25,7 +25,7 @@
      
     </div>
     <div class="col-md-5">
-      <img class="featutette-image" data-src="holder.js/500x500/auto" alt="500x500" src="http://static.wixstatic.com/media/7e3f59f4d58ffc0e7d9c4c8ed2053d2f.jpg_srz_p_439_580_75_22_0.50_1.20_0.00_jpg_srz" data-holder-rendered="true">
+      <img class="featurette-image" data-src="holder.js/500x500/auto" alt="500x500" src="http://static.wixstatic.com/media/7e3f59f4d58ffc0e7d9c4c8ed2053d2f.jpg_srz_p_439_580_75_22_0.50_1.20_0.00_jpg_srz" data-holder-rendered="true">
     </div>
           
   </div>
