--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -8,8 +8,9 @@
       Tel: 1-800-000-0000
       Fax: 123-456-7890
     </p>
+    <hr>
     <div class="row">
-      <div class="col-sm-7 col-md-7">
+      <div class="col-md-7">
         <%= form_for(@contact, :html => { class:"form-horizontal", role:"form"}) do |f| %>
           <% if @contact.errors.any? %>
             <div id="error_explanation">
@@ -24,30 +25,30 @@
           <% end %>
       
           <div class="form-group">
-            <%= f.label :name, "Nama",  for: "inputText3", class:" col-xs-offset-0 col-xs-4 col-sm-4 col-md-4 control-label weight" %>
-            <div class=" col-xs-4 col-sm-4 col-md-4">
+            <%= f.label :name, "Name",  for: "inputText3", class:" col-xs-offset-0 col-xs-2 col-sm-2 col-md-2 control-label weight" %>
+            <div class=" col-xs-5 col-sm-5 col-md-5">
               <%= f.text_field :name, class: "form-control weight", id:"inputText3" %>
             </div>
           </div>
   
   
           <div class="form-group">
-            <%= f.label :email, "Nama",  for: "inputText3", class:" col-xs-offset-0 col-xs-4 col-sm-4 col-md-4 control-label weight" %>
-            <div class=" col-xs-4 col-sm-4 col-md-4">
+            <%= f.label :email, "Email",  for: "inputText3", class:" col-xs-offset-0 col-xs-2 col-sm-2 col-md-2 control-label weight" %>
+            <div class=" col-xs-5 col-sm-5 col-md-5">
               <%= f.text_field :email, class: "form-control weight", id:"inputText3" %>
             </div>
           </div>
           
       
           <div class="form-group">
-            <%= f.label :message, "Nama",  for: "inputText3", class:" col-xs-offset-0 col-xs-4 col-sm-4 col-md-4 control-label weight" %>
-            <div class=" col-xs-4 col-sm-4 col-md-4">
+            <%= f.label :message, "Message",  for: "inputText3", class:" col-xs-offset-0 col-xs-2 col-sm-2 col-md-2 control-label weight" %>
+            <div class=" col-xs-5 col-sm-5 col-md-5">
               <%= f.text_field :message, class: "form-control weight", id:"inputText3" %>
             </div>
           </div>
   
           <div class="form-group">
-            <div class="col-xs-offset-3 col-sm-offset-4 col-sm-3 col-md-3">
+            <div class="col-xs-offset-2 col-sm-offset-2 col-sm-2 col-md-2">
                 <%= action_name =="new"? (f.submit "Send Message",  class:"btn btn-success" ):(f.submit "Send Message",  class:"btn btn-success")%>
             </div>
           </div>
@@ -63,6 +64,6 @@
     
   </div>
     <div class="col-md-5">
-      <img class="featutette-image" data-src="holder.js/500x500/auto" alt="500x500" src="http://static.wixstatic.com/media/51a1131b0e871001639715251526eddf.jpg_srz_p_390_365_75_22_0.50_1.20_0.00_jpg_srz" data-holder-rendered="true">
+      <img class="featutette-image" data-src="holder.js/500x500/auto" alt="500x500" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcTY_8839kiu6llydP6W9m5qNQu8jSn3OibtrbXKeIEObp1iAC5T7A" data-holder-rendered="true">
     </div>
 </div>
