--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,7 +21,7 @@
         <li class="active"><%= link_to "Home", root_url %></li>
         <li><%= link_to 'About Us', about_us_path %></li>
         <li><%= link_to 'Services', services_path %></li>
-        <li><%= link_to 'Contact', contact_path %></li>
+        <li><%= link_to 'Contact', new_contact_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
